[package]
name = "larian-converter"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "larian-convert"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
byteorder = "1.5"
flate2 = "1.0"
lz4_flex = "0.11"
zstd = "0.13"
quick-xml = { version = "0.31", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.6", features = ["serde"] }
indexmap = "2.0"
base64 = "0.21"

[dev-dependencies]
tempfile = "3.8"